# careld-pos-002

./: .gitignore  README.md  pyproject.toml  requirements.txt.bak  run.py  seed_premium.py  setup.sh
.drafts/: mejoras_pos_impresion.md
app/: config.py  database.py  main.py  setup_cli.py
app/api/: __init__.py  inventory.py  partners.py  repairs.py
app/models/: __init__.py  inventory.py  partner_order.py  repair.py  user.py
app/schemas/: inventory.py  repair.py
app/services/: inventory_service.py  partner_order_service.py  repair_service.py
frontend/: package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.svelte  app.css
frontend/src/components/: Layout.svelte
frontend/src/components/common/: PremiumCard.svelte  StatusModal.svelte  TicketModal.svelte  Timeline.svelte
frontend/src/components/devices/: DeviceForm.svelte
frontend/src/components/pos/: DeviceCard.svelte  DeviceDetailModal.svelte  DeviceListItem.svelte  DeviceSearchBar.svelte  POSCart.svelte  POSModalHost.svelte  ReceptionModal.svelte
frontend/src/stores/: api.js  cart.js  cartUI.js  modals.js
frontend/src/views/: ClientPortal.svelte  Customers.svelte  Devices.svelte  Inventory.svelte  Landing.svelte  Login.svelte  POS.svelte  PartnerDashboard.svelte  PartnerOrders.svelte  Repairs.svelte  Users.svelte
