[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "careldpos"
version = "0.3.1"
description = "Sistema de Punto de Venta para Talleres"
authors = [
    {name = "Fco Ivan Romero Guzman", email = "43careld@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlmodel>=0.0.14",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    "filetype>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.25.0",
    "black",
    "ruff",
]

[project.scripts]
careldpos-start = "run:main"

[tool.setuptools]
packages = ["app"]
py-modules = ["run"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I"]
fix = true
